--- a/snippets/radix4.tex
+++ b/snippets/radix4.tex
@@ -12,4 +12,14 @@
 
 \[X_4[3] = \sum_{n=0}^{3} x[n] e^{-j\frac{3\pi}{2} n} = x[0] + jx[1] - x[2] - jx[3]\]
 
+Swapped:
+
+\[X_4[0] = \sum_{n=0}^{3} x[n] = x[0] + x[2] + x[1] + x[3]\]
+
+\[X_4[1] = \sum_{n=0}^{3} x[n] e^{-j\frac{\pi}{2}n} = x[0] - jx[2] - x[1] + jx[3]\]
+
+\[X_4[2] = \sum_{n=0}^{3} x[n] e^{-j\pi n} = x[0] - x[2] + x[1] - x[3]\]
+
+\[X_4[3] = \sum_{n=0}^{3} x[n] e^{-j\frac{3\pi}{2} n} = x[0] + jx[2] - x[1] - jx[3]\]
+
 \end{document}
